opam-version: "2.0"
synopsis: "OCaml bindings for Lua"
maintainer: ["Satoru Kawahara <s1311350@gmail.com>"]
authors: ["Satoru Kawahara <s1311350@gmail.com>"]
license: "MIT"
homepage: "https://github.com/Nymphium/ocaml-lua-re"
bug-reports: "https://github.com/Nymphium/ocaml-lua-re/issues"
dev-repo: "git+https://github.com/Nymphium/ocaml-lua-re.git"
depends: [
  "dune"
  "ctypes"
  "ctypes-foreign"
  "conf-lua"
  "ppx_deriving"

  "alcotest" { with-test }
]
